--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
@@ -12,8 +13,30 @@
         <servlet-class>servlets.Main</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>Log4jInit</servlet-name>
+        <servlet-class>servlets.Log4jInit</servlet-class>
+        <init-param>
+            <param-name>logfile</param-name>
+            <param-value>WEB-INF/log4j.properties</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+
     <servlet-mapping>
         <servlet-name>Main</servlet-name>
-       <url-pattern>/Main</url-pattern>
+        <url-pattern>/Main</url-pattern>
     </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>Log4jInit</servlet-name>
+        <url-pattern>/Log4jInit</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
+
+
+
+
